<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/nav_favorites" android:icon="@drawable/ic_star_filled" android:title="@string/menu_favorites" />
    <item android:id="@+id/nav_ai_chat" android:icon="@drawable/ic_robot" android:title="@string/menu_ai_chat" />
    <item android:id="@+id/nav_gpa" android:icon="@drawable/ic_calculator" android:title="@string/menu_gpa" />
    <item android:id="@+id/nav_scholarships" android:icon="@drawable/ic_school" android:title="@string/news_title" />
    <item android:id="@+id/nav_schedule" android:icon="@drawable/ic_schedule" android:title="@string/menu_schedule" />
    <item android:id="@+id/nav_settings" android:icon="@drawable/ic_settings" android:title="@string/menu_settings" />
</menu>